Update file changes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A todolist website",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.dev.js"
   },
   "author": "Mayank Tripathi",
   "license": "ISC",
